[package]
name = "cta-bot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
poise = "0.5.2"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "macros"], default-features = false }
toml = "0.7.2"
